# nus3audio-rs

./: .Cargo.toml.swp  Cargo.toml  README.md  test.txt
.github/workflows/: build_release.yml  rust.yml
src/: main.rs  visual_mode.rs
src/nus3audio/: internal.rs  mod.rs  parser.rs  writer.rs
