[package]
name = "nus3audio"
version = "1.1.5"
authors = ["jam1garner <jam1.mcleod@hotmail.com>", "BenHall-7 <benjaminjahall@gmail.com>"]
edition = "2018"

[dependencies]
nus3audio = "^1.0.7"
itertools = "0.8"
clap = { git = "https://github.com/clap-rs/clap/" }
byteorder = "1.3"
crc = "^1.0.0"
serde_json = "1.0"
